

	- Fixed a bug that would show incorrect ballot entry status when there were
	  dropped competitors assigned to a round.

	- Added support for APDA registration seeding (Free, Half, Full, None).  It
	  must be enabled in the Event (Settings -> events -> on the left) and will
	  be visible and changeable under the entry's registrant screen.

	- Fixed some formatting.

==CHANGES RELEASED 1.23.13==

	- Fixed a thing where the CSV export would bleed for school names that had
	  a comma in them; and would not list all the students.  Both fixed.

	- Wording changes when dropping a judge to terrify Mainers less :)

	- Ordinal preferences can now be calculated based on previous pref sheets
	  by clicking on "Fill in based on past pref sheets".

	- Congress can be re-paired from the automatic pairing screen even when
	  there are existing panels using the new Wipe option; otherwise it will
	  copy existing panels from other rounds.

	- Change log is now searchable by date and by default will show you today's
	  changes only

==CHANGES RELEASED 1.13.13==

	- Paradigm-book support; an attendee can view all of a given tournament's
	  paradigms or download them into a PDF file for tourneys where there is no
	  internet access available.

	- Sweepstakes are rejiggered so you can run the report either for each
	  individual sub-category or you can see the whole combined points. So
	  places like NY state which count 3 entries from 3 separate groupings,
	  should create a sweep set for Address, Interp & Reading, put the events
	  into them, and set it to limit to 2 entries; the overall report will then
	  show the top 6 entries, 2 each from each sweep set.
	
	- School reports, the printing of which (especially printing all the
	  schools) used to take until the heat death of the universe, now are
	  considerably faster (usually take 1-2 minutes for an ordinary tournament)

	- Pairings and schematics are fixed so that tournaments in IE using names