@@ -66,7 +66,7 @@
 
 					<span class="thirdspan centeralign padless">
 						<a class="dkgreen block" href="/jbruschke/TeamBidSheet.php?id1=<% $students[0]->id %>&id2=<% $students[1]->id %>">
-							NDT Points Sheet
+							NDT Bid Sheet
 						</a>
 					</span>
 
