@@ -26,7 +26,7 @@
 		and chapter_admin.account = ?
 	");
 
-	my @results = Tab::School->search_published( $tourn->id, $account->id );
+	my @results = Tab::School->search_published( $tourn->id, $account->id ) if $tourn && $account;
 
 	my @judges;
 
