@@ -2,7 +2,7 @@ package Tab::Result;
 use base 'Tab::DBI';
 Tab::Result->table('result');
 Tab::Result->columns(Primary => qw/id/);
-Tab::Result->columns(Essential => qw/result_set entry student school round timestamp honor/);
+Tab::Result->columns(Essential => qw/result_set entry student school round timestamp honor_site honor/);
 
 Tab::Result->has_a(entry => 'Tab::Entry');
 Tab::Result->has_a(round => 'Tab::Round');
