@@ -6,6 +6,8 @@
 
 	my $bin = Tab::StrikeTime->retrieve($partial_id);
 
+	$m->abort unless $bin && $bin->judge_group;
+
 	my $group_id = $bin->judge_group->id;
 
 	my $msg = "Partial timeblock ".$bin->name." deleted";
