@@ -229,18 +229,24 @@
 
 %					}
 
-%					if ($tourn->setting("ask_quals")) { 
+%					my @qualifiers = $already->qualifiers;
+
+%					foreach my $tick (1 .. $tourn->setting("ask_quals")) { 
+
+%						my $qualifier = shift @qualifiers if @qualifiers;
 
 						<tr <% ($count % 2) ? "class=\"oddrow\"" : "class=\"evenrow\"" %>>
 
 							<th class="smallrt">
-								Qualifiers:
 							</th>
 
+							<td class="smallish rightalign">
+								Qualifier <% $tick %>:
+							</td>
+
 							<td colspan="3" class="smaller">
-								<a class="white block"  style="padding: 1px; margin: 1px;" href="details.mhtml?entry_id=<% $already->id %>&school_id=<% $school->id %>">
-									<% ($already->qualifier) ? $already->qualifier." ". $already->qualexp : "Enter Qualifier" %>
-									<% ($tourn->method->ask_two_quals && $already->qualifier) ? "<br />".$already->qual2." ".$already->qual2exp : "" %>
+								<a class="white block"  style="padding: 1px; margin: 1px;" href="details.mhtml?entry_id=<% $already->id %>&school_id=<% $school->id %>" placeholder="Name">
+									<% $qualifier ? $qualifier->result." at ".$qualifier->name : "" %>
 								</a>
 							</td>
 
