@@ -36,13 +36,6 @@
 		@done_panels = $m->comp("/funclib/account_student_panels.mas", account => $account, done => 1, student => 1);
 	} 
 
-	my $ndt;
-
-	foreach my $student (@students) {
-		foreach my $circuit ($student->chapter->circuits) {
-			$ndt++ if $circuit->id == 43;
-		}
-	}
 
 	my $now = DateTime->now;
 
@@ -324,6 +317,12 @@
 %		}
 
 %		foreach my $student (sort {$b->id <=> $a->id} @students) { 
+	
+%			my $ndt;
+
+%			foreach my $circuit ($student->chapter->circuits) {
+%				$ndt++ if $circuit->id == 43;
+%			}
 
 			<h4>Past Results at <% $student->chapter ? $student->chapter->short_name : "" %></h4>
 
@@ -404,9 +403,6 @@
 
 				if ($ndt) { 
 
-					my $student = Tab::Student->retrieve($student_id);
-
-					$m->abort unless $student;
 
 					my $ok;
 					$ok++ if $student->account && $student->account->id == $account->id;
@@ -613,7 +609,12 @@
 					</table>
 
 %				}
+
+				<br />
+				<br />
 %			}
+
+		
 %		}
 
 
