@@ -63,7 +63,6 @@
 
 		my ($start, $through, $end) = split(/\ /, $data->{TOURN}->{STARTDATE});
 
-
 		if ($through eq "through") {
 			$start = Tab::dateme($start);
 			$end = Tab::dateme($end);
