@@ -1,4 +1,11 @@
 
+	- Coaches can now access student records, along with any RFDs and comments
+	  entered online, via the student roster; click on Record to the left of any
+	  student name.
+
+	- Coaches for the NDT/CEDA circuit can enter debater honors to the NDT bid
+	  sheets via the roster/record method as well, as can individual students
+	  when they first log in.
 
 	- Fixed a bug that would show incorrect ballot entry status when there were
 	  dropped competitors assigned to a round.
